# resdoor

./: .env.example  CLAUDE.md  LICENSE  README.md  dormant_llm_puzzle.ipynb  exploration.ipynb  puzzle.ipynb  pyproject.toml  recover_iteration_3.py  requirements.txt  run_autoresearch.sh  run_iteration_1.py  run_iteration_2.py  run_iteration_3.py  run_iteration_4.py  run_iteration_5.py  run_iteration_6.py  run_local_screening.sh  smoke_test.py
data/: experiment_log.jsonl  hypothesis_bank.json  program.md
data/baselines/: dormant-model-1_115049a298532be2_activations.npy  dormant-model-1_115049a298532be2_chat.json  dormant-model-1_2483a83beb914ed4_activations.npy  dormant-model-1_93dbeba4c831d02f_activations.npy  dormant-model-1_93dbeba4c831d02f_chat.json  dormant-model-2_115049a298532be2_activations.npy  dormant-model-2_115049a298532be2_chat.json  dormant-model-2_2483a83beb914ed4_activations.npy  dormant-model-2_2483a83beb914ed4_chat.json  dormant-model-2_93dbeba4c831d02f_activations.npy  dormant-model-2_93dbeba4c831d02f_chat.json  dormant-model-3_115049a298532be2_activations.npy  dormant-model-3_115049a298532be2_chat.json  dormant-model-3_2483a83beb914ed4_activations.npy  dormant-model-3_2483a83beb914ed4_chat.json  dormant-model-3_93dbeba4c831d02f_activations.npy  dormant-model-3_93dbeba4c831d02f_chat.json
data/logs/: iteration_1.json  iteration_2.json  iteration_3.json  iteration_4.json  iteration_5.json  iteration_6.json
docs/superpowers/specs/: 2026-03-24-autoresearch-refactor-design.md
src/resdoor/: __init__.py  analysis.py  client.py  local_client.py  local_runner.py  log.py  models.py  runner.py  scoring.py  seeds.py  triggers.py
