[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "resdoor"
version = "0.1.0"
description = "Exploration toolkit for Jane Street's Dormant LLM Backdoor Puzzle"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jsinfer",
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "tqdm",
    "scikit-learn",
    "python-dotenv>=1.2.2",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "jupyter",
    "notebook",
]
local = [
    "torch>=2.0",
    "transformers>=4.40",
    "accelerate>=0.30",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest",
    "pytest-asyncio",
    "jupyter",
    "notebook",
]

[tool.hatch.build.targets.wheel]
packages = ["src/resdoor"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "D", "UP", "B", "C4", "SIM", "RUF", "PTH"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E402", "F811"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "aiohttp",
    "aiohttp.*",
    "numpy",
    "pandas",
    "matplotlib",
    "matplotlib.pyplot",
    "seaborn",
    "sklearn",
    "jsinfer",
    "tqdm",
    "pydantic",
    "pydantic.*",
    "pydantic_settings",
    "pydantic_settings.*",
    "torch",
    "torch.*",
    "transformers",
    "transformers.*",
    "accelerate",
    "accelerate.*",
]
ignore_missing_imports = true
